--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,11 @@
-<p>navbar works!</p>
+<div class="navbar bg-slate-500 text-white text-xl px-5">
+  <div class="container">
+    <ul class="navbar-links">
+      <li><a routerLink="/">Home</a></li>
+      <li><a routerLink="/">Features</a></li>
+    </ul>
+    <div class="navbar-actions">
+      <!-- Add login/logout buttons or user-related actions here -->
+    </div>
+  </div>
+</div>
