add signup and nav components

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,9 @@
-<div class="navbar bg-slate-500 text-white text-xl px-5">
-  <div class="container">
-    <ul class="navbar-links">
-      <li><a routerLink="/">Home</a></li>
-      <li><a routerLink="/">Features</a></li>
-    </ul>
-    <div class="navbar-actions">
-      <!-- Add login/logout buttons or user-related actions here -->
-    </div>
-  </div>
+<div class="container flex justify-between items-center w-full">
+  <ul class="flex space-x-4">
+    <li>
+      <button routerLink="/" class="bg-transparent border-none cursor-pointer">
+        Angular Application
+      </button>
+    </li>
+  </ul>
 </div>
