--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,15 +1,18 @@
-<div class="login-container">
-  <h2>Login</h2>
+<div class="signup-container">
+  <h2>Sign Up</h2>
   <form>
     <div class="form-group">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
     </div>
     <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+    </div>
+    <div class="form-group">
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
     </div>
-    <button type="submit">Login</button>
+    <button type="submit">Sign Up</button>
   </form>
-  <button onclick="window.location.href='/signup'">Sign Up</button>
 </div>
