--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<div class="container flex justify-between items-center w-full">
-  <ul class="flex space-x-4">
+<div class="container">
+  <ul>
     <li>
-      <button routerLink="/" class="bg-transparent border-none cursor-pointer">
+      <button [routerLink]="['/']" routerLinkActive="router-link-active">
         Angular Application
       </button>
     </li>
