--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,5 @@
-<footer class="absolute bottom-0 w-full">
-    <div align="center" class="bg-slate-400 bottom-0 text-sm shadow">
-        {{ footer() }}
-        <br>
-        <a href="{{ email_link() }}" class="text-white">Contact Me</a>
-    </div>
+<footer>
+    {{ footer() }}
+    <br>
+    <a href="{{ email_link() }}">Contact Me</a>
 </footer>
