--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -10,8 +10,45 @@ ul {
   gap: 1rem;
 }
 
+ul.left {
+  justify-content: flex-start;
+}
+
+ul.right {
+  justify-content: flex-end;
+  padding-left: 5rem;
+}
+
 button {
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+
+.feature-buttons {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  background-color: #2c3e50;
+  padding: 0.5rem 0;
+}
+
+.feature-button {
+  flex: 1;
+  text-align: center;
+  padding: 0.5rem;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  color: #bdc3c7;
+  font-size: 1rem; /* Changed this line */
+}
+
+.feature-button:hover {
+  color: white;
+  font-size: 1.1rem;
+}
+
+#home {
+  font-size: 1.5rem;
 }
