--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -3,15 +3,24 @@
   <form>
     <div class="form-group">
       <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required />
+      <input type="text" id="username" name="username" [(ngModel)]="username" (ngModelChange)="validateUsername()" required />
+      <small *ngIf="usernameError" class="error" [ngClass]="{'error': usernameError, 'success': !usernameError}">
+        {{ usernameError || 'Looks Good!' }}
+      </small>
     </div>
     <div class="form-group">
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required />
+      <input type="email" id="email" name="email" [(ngModel)]="email" (ngModelChange)="validateEmail()" required />
+      <small *ngIf="emailError" class="error" [ngClass]="{'error': emailError, 'success': !emailError}">
+        {{ emailError || 'Looks Good!' }}
+      </small>
     </div>
     <div class="form-group">
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required />
+      <input type="password" id="password" name="password" [(ngModel)]="password" (ngModelChange)="validatePassword()" required />
+      <small *ngIf="passwordError" class="error" [ngClass]="{'error': passwordError, 'success': !passwordError}">
+        {{ passwordError || 'Looks Good!' }}
+      </small>
     </div>
     <button type="submit">Sign Up</button>
   </form>
