--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,14 +1,16 @@
 <div class="login-container">
   <h2>Login</h2>
-  <div class="form-group">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required />
-  </div>
-  <div class="form-group">
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required />
-  </div>
-  <button type="submit">Login</button>
+  <form (ngSubmit)="onLogin()">
+    <div class="form-group">
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required />
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required />
+    </div>
+    <button type="submit">Login</button>
+  </form>
   <button
     type="route"
     [routerLink]="['/signup']"
