--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="signup-container">
   <h2>Sign Up</h2>
-  <form>
+  <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" [(ngModel)]="username" (ngModelChange)="validateUsername()" required />
